Favicon and Footer / Nav

--- a/plotlydash_flask_tutorial/templates/layout.jinja2
+++ b/plotlydash_flask_tutorial/templates/layout.jinja2
@@ -26,7 +26,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='dist/css/styles.css') }}" />
   <link rel="stylesheet" href="https://use.typekit.net/uqq2lcv.css">
-  <link rel="shortcut icon" href="{{ url_for('static', filename='dist/img/favicon.png') }}" type="image/x-icon" />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='dist/img/fibfavicon.png') }}" type="image/x-icon" />
   <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
